apps/base/monitoring-kube-state-metrics/deploy/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: monitoring-kube-state-metrics
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
