apps/base/monitoring-kube-state-metrics/deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: kube-state-metrics
  labels:
    prometheus-target: kube-state-metrics
spec:
  clusterIP: None
  ports:
  - name: https-main
    port: 8443
    targetPort: https-main
  - name: https-self
    port: 9443
    targetPort: https-self
  selector:
    app.kubernetes.io/name: kube-state-metrics
    app.kubernetes.io/component: kube-state-metrics
