apps/base/monitoring-kube-state-metrics/deploy/networkPolicy.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: allow-to-kube-state-metrics
spec:
  types: [Ingress]

  podSelector:
    matchLabels:
      app.kubernetes.io/name: kube-state-metrics
      app.kubernetes.io/component: kube-state-metrics

  ingress:
    # Allow from prometheus
    - ports:
        - port: https-main
        - port: https-self
      from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: monitoring-prometheus
          podSelector:
            matchLabels:
              app.kubernetes.io/component: prometheus
              app.kubernetes.io/instance: k8s
              app.kubernetes.io/name: prometheus
